Update background color

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
             <img src="images/dest/accountTracker.png" class="card-img-top" alt="Ardor Account Tracker">
             <div class="card-body">
               <h4 class="card-title">Ardor Account Tracker</h4>
+              <h5 class="card-subtitle mb-2 text-muted">Tosch</h5>
               <p class="card-text">Track and order your Accounts on Ardor. Each profile can hold a multiple of different RS accounts. All the chains tracked in one screen. Only watching mode.</p>
               <a href="https://rstrack.info/" target="_blank" class="btn btn-outline-dark">Website</a>
             </div>
@@ -83,6 +84,7 @@
             <img src="images/dest/smartvoting.jpg" class="card-img-top" alt="Smartvoting">
             <div class="card-body">
               <h4 class="card-title">Smart Voting</h4>
+              <h5 class="card-subtitle mb-2 text-muted">andricor</h5>
               <p class="card-text">Blockchain powered e-voting using the voting capabilities on the Ardor blockchain.</p>
               <a href="https://smartvoting.net/" target="_blank" class="btn btn-outline-dark">Website</a>
             </div>
@@ -92,6 +94,7 @@
             <img src="images/dest/ardor_rocks.jpg" class="card-img-top" alt="Ardor Rocks">
             <div class="card-body">
               <h4 class="card-title">Ardor Rocks</h4>
+              <h5 class="card-subtitle mb-2 text-muted">andricor</h5>
               <p class="card-text">Ardor Rocks is a kind of SNS(Social Network Service). You can upload your opinion, news, picture, video etc. You can get points depends how much activity you have here. The points are automatically given and can be converted to ROCKS tokens on Ardor as 1:1 ratio.</p>
               <a href="https://ardor.rocks/" target="_blank" class="btn btn-outline-dark">Website</a>
             </div>
@@ -110,6 +113,7 @@
             <img src="images/dest/ardorworld.png" class="card-img-top" alt="Ardor World">
             <div class="card-body">
               <h4 class="card-title">Ardor World Blockchain Explorer</h4>
+              <h5 class="card-subtitle mb-2 text-muted">sergei</h5>
               <p class="card-text">Ardor World is a block explorer for Ardor with testnet token faucets, Telegram bot, and social feed.</p>
               <a href="https://www.ardor.world/" target="_blank" class="btn btn-outline-dark">Website</a>
             </div>
@@ -119,6 +123,7 @@
             <img src="images/dest/ardorTools.png" class="card-img-top" alt="ardor.tools">
             <div class="card-body">
               <h4 class="card-title">Ardor.tools Block Explorer</h4>
+              <h5 class="card-subtitle mb-2 text-muted">MrV</h5>
               <p class="card-text">Ardor.tools is a block explorer for Ardor.</p>
               <a href="https://ardor.tools/" target="_blank" class="btn btn-outline-dark">Website</a>
             </div>
